# fastapi-framework

./: README.md  pyproject.toml
src/: main.py
src/domain/logger/: __init__.py  formatter.py  logger.py  strfmt.py
